name:                cookies
version:             0.1.0.0
synopsis:            web cookies
description:         web cookies    
homepage:            https://github.com/chessai/cookies.git
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          chessai <chessai1996@gmail.com>
copyright:           Copyring (C) Layer 3 Communications, Andrew Martin 
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Cookie
  build-depends:
      base >=4.7 && < 5.0
    , bytestring >= 0.10
    , chronos
    , hashable
    , text
  default-language:    Haskell2010
